force-app/main/default/objects/Realtor__c/Realtor__c.object-meta.xml
<CustomObject>
    <description>Sales or rental specialist associated with properties.</description>
    <label>Realtor</label>
    <nameField><label>Realtor Name</label><type>Text</type></nameField>
    <pluralLabel>Realtors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>