force-app/main/default/objects/Realtor__c/fields/Email__c.field-meta.xml
<CustomField><fullName>Email__c</fullName><description>Primary realtor email.</description><inlineHelpText>Used for buyer and appointment communication.</inlineHelpText><label>Email</label><required>true</required><trackHistory>true</trackHistory><type>Email</type><unique>false</unique></CustomField>