force-app/main/default/objects/Realtor__c/fields/Field_of_Duty__c.field-meta.xml
<CustomField><fullName>Field_of_Duty__c</fullName><description>Specialization or duty area for this realtor.</description><inlineHelpText>Example: luxury homes, land, commercial office, rentals.</inlineHelpText><label>Field of Duty</label><length>255</length><required>false</required><type>Text</type><unique>false</unique></CustomField>