force-app/main/default/objects/Realtor__c/fields/Phone__c.field-meta.xml
<CustomField><fullName>Phone__c</fullName><description>Primary realtor phone number.</description><inlineHelpText>Required contact number for the public realtor profile.</inlineHelpText><label>Phone</label><required>true</required><trackHistory>true</trackHistory><type>Phone</type></CustomField>