force-app/main/default/objects/Realtor__c/fields/Photo_URL__c.field-meta.xml
<CustomField><fullName>Photo_URL__c</fullName><description>Public profile image URL for the realtor.</description><inlineHelpText>Displayed by the public web application.</inlineHelpText><label>Photo URL</label><required>false</required><type>Url</type></CustomField>